# Tifaw

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Tifaw.spec  config.yaml  pyproject.toml  setup_app.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: README.md  api.md  architecture.md  features.md  roadmap.md
frontend/: app.js  icon.icns  index.html  menubar.html  styles.css
tifaw/: __init__.py  app.py  config.py  main.py  menubar.py
tifaw/api/: routes_chat.py  routes_cleanup.py  routes_config.py  routes_digest.py  routes_documents.py  routes_duplicates.py  routes_faces.py  routes_files.py  routes_folders.py  routes_onboarding.py  routes_organize.py  routes_overview.py  routes_photos.py  routes_projects.py  routes_rename.py  routes_search.py  routes_status.py
tifaw/chat/: agent.py
tifaw/cleanup/: stale.py
tifaw/digest/: summary.py
tifaw/duplicates/: detector.py
tifaw/faces/: detector.py
tifaw/indexer/: analyzer.py  extractors.py  pipeline.py  queue.py  spotlight.py
tifaw/llm/: client.py
tifaw/models/: database.py  schemas.py
tifaw/organizer/: planner.py
tifaw/projects/: analyzer.py  scanner.py
tifaw/renamer/: smart_rename.py
tifaw/screenshots/: intelligence.py
tifaw/smartfolders/: collections.py
tifaw/watcher/: handler.py  observer.py
